[package]
name = "fnv"
version = "1.0.7"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
description = "Fowler–Noll–Vo hash function"
license = "Apache-2.0 / MIT"
readme = "README.md"
repository = "https://github.com/servo/rust-fnv"
documentation = "https://doc.servo.org/fnv/"
edition = "2018"

[lib]
name = "fnv"
path = "lib.rs"

[features]
default = ["std"]
std = ["sgx_tstd"]
with-testing = ["inventory", "sgx_tstd", "testing"]

[dependencies.inventory]
optional    = true
version     = "0.1.6"

[dependencies.sgx_tstd]
git         = "https://github.com/apache/teaclave-sgx-sdk"
optional    = true
rev         = "v1.1.2"

[dependencies.testing]
branch      = "rsgx1.1.2"
git         = "https://github.com/usccommunity/teaclave-testing"
optional    = true